--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "lite-server --baseDir=./02-6-challenge2"
+    "start": "lite-server --baseDir=./Flexbox-FlexboxBasicLayout"
   },
   "repository": {
     "type": "git",
