Flexbox challenge #2 - Solution - Create the html boilerplate. Good idea to use <main> element. Good idea to flatten the structure by having all classes (main container row) in the main.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "lite-server --baseDir=./Flexbox-FlexboxBasicLayout"
+    "start": "lite-server --baseDir=./02-6-challenge2"
   },
   "repository": {
     "type": "git",
