--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "lite-server --baseDir=./flexbox-challenge-4"
+    "start": "lite-server --baseDir=./nav-challenge"
   },
   "repository": {
     "type": "git",
